tests/ui/g-wire-control-one-shot.stderr
error[E0080]: evaluation panicked: GenericCapToken wire controls require reusable descriptor semantics
 --> src/global.rs
  |
  |         validate_token_control_payload_contract(spec);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::g::Msg<121, hibana::integration::cap::GenericCapToken<OneShotWireKind>, OneShotWireKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_token_control_payload_contract`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("GenericCapToken wire controls require reusable descriptor semantics");
  |         ----------------------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |             let path = match <M as MessageControlSpec>::CONTROL {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole>::INDEX;
  | |         let to = <To as KnownRole>::INDEX;
  | |         crate::global::validate_role_index(from);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, Msg<121, GenericCapToken<OneShotWireKind>, OneShotWireKind>, 0>`
  --> tests/ui/g-wire-control-one-shot.rs:44:13
   |
44 |       let _ = g::send::<
   |  _____________^
45 | |         g::Role<0>,
46 | |         g::Role<1>,
47 | |         g::Msg<121, GenericCapToken<OneShotWireKind>, OneShotWireKind>,
48 | |         0,
49 | |     >();
   | |_______^
